--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 anyio==4.0.0
 appdirs==1.4.4
-apturl
+apturl==0.5.2
 apyori==1.1.2
 argon2-cffi==21.1.0
 asgiref==3.6.0
